--- a/WAR_MLmodel.ipynb
+++ b/WAR_MLmodel.ipynb
@@ -44,8 +44,7 @@
     "columns = [\"Age\", \"Year\", \"Team\", \"Division\", \"League\", \"Percent_Season_Played\", \"Num_DL_Movements\",\n",
     "          \"Percent_Contract_Complete\", \"Player_Salary\", \"Team_Payroll\", \"Team_Win_Percentage\"]\n",
     "\n",
-    "target = [\"WAR_PSP\"]\n",
-    "# is going to be adjusted WAR"
+    "target = [\"WAR_PSP\"]\n"
    ]
   },
   {
@@ -209,7 +208,6 @@
     "MLB_data = Path('Resources/all_players.csv')\n",
     "\n",
     "MLB_df = pd.read_csv(MLB_data)\n",
-    "\n",
     "\n",
     "\n",
     "# dropping the null values will help us get rid of any empty data  \n",
