removing the column team in our ML notebook for model simplification.

--- a/WAR_MLmodel.ipynb
+++ b/WAR_MLmodel.ipynb
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "tribal-variable",
+   "id": "major-bandwidth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "monthly-trailer",
+   "id": "anticipated-alias",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tough-boring",
+   "id": "raising-burns",
    "metadata": {},
    "source": [
     "##### Variables to encode: team & league"
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "northern-reading",
+   "id": "effective-parallel",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "amino-question",
+   "id": "average-spotlight",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "rocky-basement",
+   "id": "medieval-ladder",
    "metadata": {
     "scrolled": true
    },
@@ -639,14 +639,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pressing-valuable",
+   "id": "complimentary-testimony",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "obvious-joyce",
+   "id": "appointed-playlist",
    "metadata": {},
    "source": [
     "    These two players are the only ones that have been traded 2 times within a single season over the last 25 season, therefore there is not a significance for keeping these two players in our dataset. Removing two players' data is not going to change our results significantly enough due to the large sample size."
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "subsequent-sequence",
+   "id": "charged-middle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "sonic-consultancy",
+   "id": "representative-bulgaria",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "modular-artwork",
+   "id": "liable-sport",
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "inclusive-place",
+   "id": "intermediate-crime",
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "planned-colonial",
+   "id": "speaking-export",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "painted-dining",
+   "id": "enclosed-pressing",
    "metadata": {},
    "source": [
     "    To make the data more uniform - we are going to redefine all of the single trades in a season to be Uniform in AL/NL instead of both AL/NL and NL/AL "
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "satisfactory-transportation",
+   "id": "orange-parking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "medical-louisville",
+   "id": "sitting-freeze",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "streaming-silicon",
+   "id": "lonely-mainstream",
    "metadata": {},
    "source": [
     "    above we have shown that the new all_df we will be working with has a uniform league column now - with no NL/AL values but with replaced AL/NL values. We have also reassured the absence of the multiple trades players. \n",
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "asian-roberts",
+   "id": "rental-element",
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liable-deposit",
+   "id": "virtual-discussion",
    "metadata": {},
    "source": [
     "    Now we are going to view the different team names in this dataset:"
@@ -1041,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "twelve-clothing",
+   "id": "built-decline",
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prime-washington",
+   "id": "crude-argument",
    "metadata": {},
    "source": [
     "    there are 167 unique team names / trades in our current dataframe\n",
@@ -1073,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "constitutional-julian",
+   "id": "danish-courage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "square-rolling",
+   "id": "planned-dodge",
    "metadata": {},
    "source": [
     "    from the team_names_dict we will conver the team values to their encoded values that they are given by the dictionary "
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "embedded-dover",
+   "id": "anonymous-pontiac",
    "metadata": {},
    "outputs": [
     {
@@ -1243,9 +1243,270 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "facial-meeting",
+   "metadata": {},
+   "source": [
+    "    Within considering the 167 unique team values - we have decided to remove the team column from the Machine Learning model due to simplification purposes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "adult-climb",
+   "execution_count": 29,
+   "id": "adolescent-wells",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>year</th>\n",
+       "      <th>league</th>\n",
+       "      <th>player_salary</th>\n",
+       "      <th>percent_season_played</th>\n",
+       "      <th>war_psp</th>\n",
+       "      <th>num_dl_movements</th>\n",
+       "      <th>team_win_percentage</th>\n",
+       "      <th>team_payroll</th>\n",
+       "      <th>percent_contract_complete</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bobby Abreu</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4354977</td>\n",
+       "      <td>0.994676</td>\n",
+       "      <td>6.213081</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.401235</td>\n",
+       "      <td>69700927</td>\n",
+       "      <td>33.333332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bobby Abreu</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7193330</td>\n",
+       "      <td>1.029782</td>\n",
+       "      <td>5.039903</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.530864</td>\n",
+       "      <td>60144837</td>\n",
+       "      <td>66.666664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bobby Abreu</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9000338</td>\n",
+       "      <td>1.001989</td>\n",
+       "      <td>5.818425</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.493827</td>\n",
+       "      <td>82364470</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bobby Abreu</td>\n",
+       "      <td>29</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12643905</td>\n",
+       "      <td>1.016617</td>\n",
+       "      <td>5.282226</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.530864</td>\n",
+       "      <td>98344579</td>\n",
+       "      <td>16.666668</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bobby Abreu</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14346025</td>\n",
+       "      <td>1.042947</td>\n",
+       "      <td>6.289872</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.530864</td>\n",
+       "      <td>126162692</td>\n",
+       "      <td>33.333332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2382</th>\n",
+       "      <td>Barry Zito</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22045868</td>\n",
+       "      <td>1.026738</td>\n",
+       "      <td>2.444635</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.543210</td>\n",
+       "      <td>98451427</td>\n",
+       "      <td>42.857143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2383</th>\n",
+       "      <td>Barry Zito</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21690091</td>\n",
+       "      <td>1.065954</td>\n",
+       "      <td>1.060084</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.567901</td>\n",
+       "      <td>114698178</td>\n",
+       "      <td>57.142857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2384</th>\n",
+       "      <td>Barry Zito</td>\n",
+       "      <td>33</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21026387</td>\n",
+       "      <td>0.286988</td>\n",
+       "      <td>-2.264907</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.530864</td>\n",
+       "      <td>134339671</td>\n",
+       "      <td>71.428570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2385</th>\n",
+       "      <td>Barry Zito</td>\n",
+       "      <td>34</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21156837</td>\n",
+       "      <td>0.985740</td>\n",
+       "      <td>0.071013</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.580247</td>\n",
+       "      <td>91284072</td>\n",
+       "      <td>85.714290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2386</th>\n",
+       "      <td>Barry Zito</td>\n",
+       "      <td>35</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21948857</td>\n",
+       "      <td>0.713012</td>\n",
+       "      <td>-3.450150</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.469136</td>\n",
+       "      <td>156034794</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2385 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             name  age  year  league  player_salary  percent_season_played  \\\n",
+       "0     Bobby Abreu   26  2000       0        4354977               0.994676   \n",
+       "1     Bobby Abreu   27  2001       0        7193330               1.029782   \n",
+       "2     Bobby Abreu   28  2002       0        9000338               1.001989   \n",
+       "3     Bobby Abreu   29  2003       0       12643905               1.016617   \n",
+       "4     Bobby Abreu   30  2004       0       14346025               1.042947   \n",
+       "...           ...  ...   ...     ...            ...                    ...   \n",
+       "2382   Barry Zito   31  2009       0       22045868               1.026738   \n",
+       "2383   Barry Zito   32  2010       0       21690091               1.065954   \n",
+       "2384   Barry Zito   33  2011       0       21026387               0.286988   \n",
+       "2385   Barry Zito   34  2012       0       21156837               0.985740   \n",
+       "2386   Barry Zito   35  2013       0       21948857               0.713012   \n",
+       "\n",
+       "       war_psp  num_dl_movements  team_win_percentage  team_payroll  \\\n",
+       "0     6.213081                 0             0.401235      69700927   \n",
+       "1     5.039903                 0             0.530864      60144837   \n",
+       "2     5.818425                 0             0.493827      82364470   \n",
+       "3     5.282226                 0             0.530864      98344579   \n",
+       "4     6.289872                 0             0.530864     126162692   \n",
+       "...        ...               ...                  ...           ...   \n",
+       "2382  2.444635                 0             0.543210      98451427   \n",
+       "2383  1.060084                 0             0.567901     114698178   \n",
+       "2384 -2.264907                 2             0.530864     134339671   \n",
+       "2385  0.071013                 0             0.580247      91284072   \n",
+       "2386 -3.450150                 0             0.469136     156034794   \n",
+       "\n",
+       "      percent_contract_complete  \n",
+       "0                     33.333332  \n",
+       "1                     66.666664  \n",
+       "2                    100.000000  \n",
+       "3                     16.666668  \n",
+       "4                     33.333332  \n",
+       "...                         ...  \n",
+       "2382                  42.857143  \n",
+       "2383                  57.142857  \n",
+       "2384                  71.428570  \n",
+       "2385                  85.714290  \n",
+       "2386                 100.000000  \n",
+       "\n",
+       "[2385 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MLB_df = MLB_df.drop([\"team\"], axis=1)\n",
+    "MLB_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "direct-dressing",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1523,7 @@
        "Name: war_psp, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,17 +1535,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coral-pressure",
+   "id": "derived-paintball",
    "metadata": {},
    "source": [
-    "    We have decided to convert the target claues to \"high_war\", \"medium_war\", and \"low_war\" we will do this based on the 25th, 50th, and 75th percentile scores from the summary statistics above. \n",
-    "   "
+    "    We have decided to convert the target values to \"high_war\", \"medium_war\", and \"low_war\" we will do this based on the 25th, 50th, and 75th percentile scores from the summary statistics above. \n",
+    "   \n",
+    " "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tutorial-degree",
+   "id": "commercial-cricket",
    "metadata": {},
    "outputs": [],
    "source": []
