updating the ML notebook.

--- a/WAR_MLmodel.ipynb
+++ b/WAR_MLmodel.ipynb
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "major-bandwidth",
+   "id": "compressed-boundary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "anticipated-alias",
+   "id": "sporting-suggestion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "raising-burns",
+   "id": "patient-thursday",
    "metadata": {},
    "source": [
     "##### Variables to encode: team & league"
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "effective-parallel",
+   "id": "registered-medication",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "average-spotlight",
+   "id": "greater-scoop",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "medieval-ladder",
+   "id": "laughing-findings",
    "metadata": {
     "scrolled": true
    },
@@ -639,14 +639,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "complimentary-testimony",
+   "id": "bacterial-relaxation",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "appointed-playlist",
+   "id": "secure-mother",
    "metadata": {},
    "source": [
     "    These two players are the only ones that have been traded 2 times within a single season over the last 25 season, therefore there is not a significance for keeping these two players in our dataset. Removing two players' data is not going to change our results significantly enough due to the large sample size."
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "charged-middle",
+   "id": "wanted-sentence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "representative-bulgaria",
+   "id": "tested-functionality",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "liable-sport",
+   "id": "greatest-webster",
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "intermediate-crime",
+   "id": "conditional-dealing",
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "speaking-export",
+   "id": "cooked-penguin",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "enclosed-pressing",
+   "id": "minute-advertising",
    "metadata": {},
    "source": [
     "    To make the data more uniform - we are going to redefine all of the single trades in a season to be Uniform in AL/NL instead of both AL/NL and NL/AL "
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "orange-parking",
+   "id": "alien-serial",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "sitting-freeze",
+   "id": "simplified-ordinance",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lonely-mainstream",
+   "id": "thick-phenomenon",
    "metadata": {},
    "source": [
     "    above we have shown that the new all_df we will be working with has a uniform league column now - with no NL/AL values but with replaced AL/NL values. We have also reassured the absence of the multiple trades players. \n",
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "rental-element",
+   "id": "received-bulgarian",
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "virtual-discussion",
+   "id": "measured-elimination",
    "metadata": {},
    "source": [
     "    Now we are going to view the different team names in this dataset:"
@@ -1041,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "built-decline",
+   "id": "elder-bracelet",
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "crude-argument",
+   "id": "frozen-transfer",
    "metadata": {},
    "source": [
     "    there are 167 unique team names / trades in our current dataframe\n",
@@ -1073,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "danish-courage",
+   "id": "terminal-alliance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "planned-dodge",
+   "id": "biological-address",
    "metadata": {},
    "source": [
     "    from the team_names_dict we will conver the team values to their encoded values that they are given by the dictionary "
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "anonymous-pontiac",
+   "id": "convinced-robin",
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "facial-meeting",
+   "id": "daily-representation",
    "metadata": {},
    "source": [
     "    Within considering the 167 unique team values - we have decided to remove the team column from the Machine Learning model due to simplification purposes"
@@ -1252,8 +1252,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "adolescent-wells",
+   "execution_count": 20,
+   "id": "trying-march",
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1493,7 @@
        "[2385 rows x 11 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1505,64 +1505,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "direct-dressing",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    2385.000000\n",
-       "mean        3.039413\n",
-       "std         2.654154\n",
-       "min       -10.417371\n",
-       "25%         1.289255\n",
-       "50%         3.061863\n",
-       "75%         4.751849\n",
-       "max        13.103100\n",
-       "Name: war_psp, dtype: float64"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Look at the summary stats of the WAR column to see how we can convert the target column based on value\n",
-    "MLB_df[\"war_psp\"].describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "derived-paintball",
-   "metadata": {},
-   "source": [
-    "    We have decided to convert the target values to \"high_war\", \"medium_war\", and \"low_war\" we will do this based on the 25th, 50th, and 75th percentile scores from the summary statistics above. \n",
-    "   \n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "commercial-cricket",
+   "id": "organized-transportation",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "close-battlefield",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "statutory-original",
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "generous-wrist",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Now we will split our data into training and test sets \n"
+    "# Look at the summary stats of the WAR column to see how we can convert the target column based on value\n",
+    "#summary_statistics = MLB_df[\"war_psp\"].describe()\n",
+    "#summary_statistics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "cosmetic-present",
+   "execution_count": 22,
+   "id": "hollywood-district",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mean_war = summary_statistics[['mean']]\n",
+    "#mean_war"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "sporting-checklist",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "    We have decided to convert the target values to \"aboveAvg_war\" and \"belowAvg_war\" \n",
+    "    \n",
+    "    If the WAR score is below the mean of 3.039413 then it will be considered below average and above the mean would be connsidered above average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "moral-buying",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MLB_df.loc[MLB_df[\"war_psp\"] >= 3.039413, \"war\"] = \"aboveAvg_war\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "three-laser",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MLB_df.loc[MLB_df[\"war_psp\"] < 3.039413, \"war\" ] = \"belowAvg_war\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "structured-driver",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MLB_df.drop([\"war_psp\"], axis=1)\n",
+    "#MLB_df[\"war_psp\"] = MLB_df[\"war\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "higher-heritage",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MLB_df = MLB_df.drop([\"war\"], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "marked-manchester",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MLB_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "handled-program",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1577,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "id": "large-exception",
    "metadata": {},
    "outputs": [],
@@ -1587,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "attempted-glucose",
    "metadata": {},
    "outputs": [],
@@ -1598,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "id": "elder-compensation",
    "metadata": {},
    "outputs": [],
@@ -1632,6 +1678,47 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fundamental-speaking",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "prospective-translation",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'easyEn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-3b7655d82868>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Calculated the balanced accuracy score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0measyEn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mbalanced_accuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'easyEn' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculated the balanced accuracy score\n",
+    "y_pred = easyEn.predict(X_test)\n",
+    "\n",
+    "balanced_accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "martial-protest",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "criminal-alberta",
    "metadata": {},
    "outputs": [],
    "source": []
